--- a/Spaceship_Titanic/02_models.ipynb
+++ b/Spaceship_Titanic/02_models.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +301,7 @@
        "[8693 rows x 14 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +357,260 @@
     "    df_train[col+'_class'] = 0\n",
     "    df_train.loc[(df_train[col]>0)&(df_train[col]<mean_value),col+'_class']=0.5\n",
     "    df_train.loc[(df_train[col]>=mean_value),col+'_class'] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variable selection and train-test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PassengerId', 'CryoSleep', 'Cabin', 'Age', 'VIP', 'RoomService',\n",
+       "       'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck', 'Name', 'Transported',\n",
+       "       'Num', 'HomePlanet_Earth', 'HomePlanet_Europa', 'HomePlanet_Mars',\n",
+       "       'Destination_55_Cancri_e', 'Destination_PSO_J318.5-22',\n",
+       "       'Destination_TRAPPIST-1e', 'Deck_A', 'Deck_B', 'Deck_C', 'Deck_D',\n",
+       "       'Deck_E', 'Deck_F', 'Deck_G', 'Deck_T', 'Side_P', 'Side_S',\n",
+       "       'RoomService_class', 'FoodCourt_class', 'ShoppingMall_class',\n",
+       "       'Spa_class', 'VRDeck_class'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_columns = ['CryoSleep','Age','HomePlanet_Earth','HomePlanet_Europa',\n",
+    "                    'HomePlanet_Mars','Destination_55_Cancri_e',\n",
+    "                    'Destination_PSO_J318.5-22','Destination_TRAPPIST-1e',\n",
+    "                    'Deck_A','Deck_B','Deck_C','Deck_D','Deck_E','Deck_F',\n",
+    "                    'Deck_G','Deck_T','Side_P','Side_S','RoomService_class',\n",
+    "                    'FoodCourt_class','ShoppingMall_class','Spa_class',\n",
+    "                    'VRDeck_class']\n",
+    "\n",
+    "X = df_train[selected_columns]\n",
+    "y = df_train['Transported']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20,\n",
+    "                                                    random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=10)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define model\n",
+    "clf_forest = RandomForestClassifier(n_estimators=100, max_depth=10)\n",
+    "\n",
+    "# Train model\n",
+    "clf_forest.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy in train set: 0.8441184929536957\n",
+      "Accuracy in test set: 0.7682576193214491\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prediction in train set\n",
+    "pred = clf_forest.predict(X_train)\n",
+    "train_acc = accuracy_score(y_train, pred)\n",
+    "\n",
+    "# Predictions in test set\n",
+    "pred_test = clf_forest.predict(X_test)\n",
+    "test_acc = accuracy_score(y_test, pred_test)\n",
+    "\n",
+    "print(f\"\"\"Accuracy in train set: {train_acc}\n",
+    "Accuracy in test set: {test_acc}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2929,  525],\n",
+       "       [ 559, 2941]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_train, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[669, 192],\n",
+       "       [211, 667]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, pred_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = {\n",
+    "    'n_estimators': [150,200,250,300],\n",
+    "    'max_depth': [5,10,15,20,25]\n",
+    "}\n",
+    "forest = RandomForestClassifier()\n",
+    "clf = GridSearchCV(estimator=forest, param_grid=parameters,\n",
+    "                   n_jobs=-1, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestClassifier(), n_jobs=-1,\n",
+       "             param_grid={'max_depth': [5, 10, 15, 20, 25],\n",
+       "                         'n_estimators': [150, 200, 250, 300]})"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 10, 'n_estimators': 150}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7745335963488401"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.best_score_"
    ]
   },
   {
