--- a/Spaceship_Titanic/02_models.ipynb
+++ b/Spaceship_Titanic/02_models.ipynb
@@ -9,12 +9,13 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +302,7 @@
        "[8693 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +386,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,23 +439,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(max_depth=10)"
+       "RandomForestClassifier(max_depth=10, n_estimators=250)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define model\n",
-    "clf_forest = RandomForestClassifier(n_estimators=100, max_depth=10)\n",
+    "clf_forest = RandomForestClassifier(n_estimators=250, max_depth=10)\n",
     "\n",
     "# Train model\n",
     "clf_forest.fit(X_train, y_train)"
@@ -462,15 +463,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy in train set: 0.8441184929536957\n",
-      "Accuracy in test set: 0.7682576193214491\n"
+      "Accuracy in train set: 0.8431118780557952\n",
+      "Accuracy in test set: 0.765382403680276\n"
      ]
     }
    ],
@@ -489,17 +490,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2929,  525],\n",
-       "       [ 559, 2941]])"
+       "array([[2908,  546],\n",
+       "       [ 542, 2958]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,17 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[669, 192],\n",
-       "       [211, 667]])"
+       "array([[662, 199],\n",
+       "       [209, 669]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +565,7 @@
        "                         'n_estimators': [150, 200, 250, 300]})"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 10, 'n_estimators': 150}"
+       "{'max_depth': 10, 'n_estimators': 250}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,22 +596,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7745335963488401"
+       "0.7736139905544699"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clf.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBOOST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sergiogg/anaconda3/envs/kaggle_competitions/lib/python3.8/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:52:44] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, enable_categorical=False,\n",
+       "              gamma=0, gpu_id=-1, importance_type=None,\n",
+       "              interaction_constraints='', learning_rate=0.300000012,\n",
+       "              max_delta_step=0, max_depth=6, min_child_weight=1, missing=nan,\n",
+       "              monotone_constraints='()', n_estimators=100, n_jobs=4,\n",
+       "              num_parallel_tree=1, predictor='auto', random_state=0,\n",
+       "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "              tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf_xgb = xgb.XGBClassifier()\n",
+    "\n",
+    "clf_xgb.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy in train set: 0.8717285015818234\n",
+      "Accuracy in test set: 0.7521564117308798\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prediction in train set\n",
+    "pred = clf_xgb.predict(X_train)\n",
+    "train_acc = accuracy_score(y_train, pred)\n",
+    "\n",
+    "# Predictions in test set\n",
+    "pred_test = clf_xgb.predict(X_test)\n",
+    "test_acc = accuracy_score(y_test, pred_test)\n",
+    "\n",
+    "print(f\"\"\"Accuracy in train set: {train_acc}\n",
+    "Accuracy in test set: {test_acc}\"\"\")"
    ]
   },
   {
