First submission with random forest

--- a/Spaceship_Titanic/02_models.ipynb
+++ b/Spaceship_Titanic/02_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,13 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "import xgboost as xgb\n",
+    "# import xgboost as xgb\n",
     "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "[8693 rows x 14 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,6 +841,503 @@
    ],
    "source": [
     "clf.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict in test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>HomePlanet</th>\n",
+       "      <th>CryoSleep</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>VIP</th>\n",
+       "      <th>RoomService</th>\n",
+       "      <th>FoodCourt</th>\n",
+       "      <th>ShoppingMall</th>\n",
+       "      <th>Spa</th>\n",
+       "      <th>VRDeck</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0013_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>True</td>\n",
+       "      <td>G/3/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Nelly Carsoning</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0018_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>F/4/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2823.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Lerome Peckers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0019_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>True</td>\n",
+       "      <td>C/0/S</td>\n",
+       "      <td>55 Cancri e</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Sabih Unhearfus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0021_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C/1/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6652.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>585.0</td>\n",
+       "      <td>Meratz Caltilter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0023_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>F/5/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>635.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Brence Harperez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4272</th>\n",
+       "      <td>9266_02</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>True</td>\n",
+       "      <td>G/1496/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Jeron Peter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4273</th>\n",
+       "      <td>9269_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>847.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>Matty Scheron</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4274</th>\n",
+       "      <td>9271_01</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>True</td>\n",
+       "      <td>D/296/P</td>\n",
+       "      <td>55 Cancri e</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Jayrin Pore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4275</th>\n",
+       "      <td>9273_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>D/297/P</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2680.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>523.0</td>\n",
+       "      <td>Kitakan Conale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4276</th>\n",
+       "      <td>9277_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>True</td>\n",
+       "      <td>G/1498/S</td>\n",
+       "      <td>PSO J318.5-22</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Lilace Leonzaley</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4277 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId HomePlanet CryoSleep     Cabin    Destination   Age    VIP  \\\n",
+       "0        0013_01      Earth      True     G/3/S    TRAPPIST-1e  27.0  False   \n",
+       "1        0018_01      Earth     False     F/4/S    TRAPPIST-1e  19.0  False   \n",
+       "2        0019_01     Europa      True     C/0/S    55 Cancri e  31.0  False   \n",
+       "3        0021_01     Europa     False     C/1/S    TRAPPIST-1e  38.0  False   \n",
+       "4        0023_01      Earth     False     F/5/S    TRAPPIST-1e  20.0  False   \n",
+       "...          ...        ...       ...       ...            ...   ...    ...   \n",
+       "4272     9266_02      Earth      True  G/1496/S    TRAPPIST-1e  34.0  False   \n",
+       "4273     9269_01      Earth     False       NaN    TRAPPIST-1e  42.0  False   \n",
+       "4274     9271_01       Mars      True   D/296/P    55 Cancri e   NaN  False   \n",
+       "4275     9273_01     Europa     False   D/297/P            NaN   NaN  False   \n",
+       "4276     9277_01      Earth      True  G/1498/S  PSO J318.5-22  43.0  False   \n",
+       "\n",
+       "      RoomService  FoodCourt  ShoppingMall     Spa  VRDeck              Name  \n",
+       "0             0.0        0.0           0.0     0.0     0.0   Nelly Carsoning  \n",
+       "1             0.0        9.0           0.0  2823.0     0.0    Lerome Peckers  \n",
+       "2             0.0        0.0           0.0     0.0     0.0   Sabih Unhearfus  \n",
+       "3             0.0     6652.0           0.0   181.0   585.0  Meratz Caltilter  \n",
+       "4            10.0        0.0         635.0     0.0     0.0   Brence Harperez  \n",
+       "...           ...        ...           ...     ...     ...               ...  \n",
+       "4272          0.0        0.0           0.0     0.0     0.0       Jeron Peter  \n",
+       "4273          0.0      847.0          17.0    10.0   144.0     Matty Scheron  \n",
+       "4274          0.0        0.0           0.0     0.0     0.0       Jayrin Pore  \n",
+       "4275          0.0     2680.0           0.0     0.0   523.0    Kitakan Conale  \n",
+       "4276          0.0        0.0           0.0     0.0     0.0  Lilace Leonzaley  \n",
+       "\n",
+       "[4277 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv('./data/train.csv')\n",
+    "\n",
+    "# Extract deck and side\n",
+    "df_train.Cabin = df_train.Cabin.fillna('none/none/none')\n",
+    "df_train[['Deck','Num','Side']] = df_train.Cabin.str.split('/', expand=True)\n",
+    "df_train.loc[df_train.Deck=='none',['Deck','Side']] = [None, None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract deck and side\n",
+    "df_test.Cabin = df_test.Cabin.fillna('none/none/none')\n",
+    "df_test[['Deck','Num','Side']] = df_test.Cabin.str.split('/', expand=True)\n",
+    "df_test.loc[df_test.Deck=='none',['Deck','Side']] = [None, None]\n",
+    "\n",
+    "# Remove blanck spaces in Destination\n",
+    "df_test.Destination = df_test.Destination.str.replace(' ','_')\n",
+    "\n",
+    "# Dummy variables\n",
+    "dummies = ['HomePlanet','Destination','Deck','Side']\n",
+    "\n",
+    "# Fill missing values with mode\n",
+    "for col in dummies:\n",
+    "    df_test[col].fillna(df_train[col].mode()[0], inplace=True)\n",
+    "\n",
+    "# Dummie variables from this columns\n",
+    "df_test = pd.get_dummies(df_test, columns=dummies)\n",
+    "\n",
+    "# Convert CryoSleep to dummy\n",
+    "df_test.CryoSleep.fillna(df_train.CryoSleep.mode()[0], inplace=True)\n",
+    "df_test.CryoSleep = df_test.CryoSleep.astype(int)\n",
+    "\n",
+    "# Fill missing values and scale Age\n",
+    "df_test.Age.fillna(round(df_train.Age.mean()), inplace=True)\n",
+    "df_test.Age = df_test.Age / df_train.Age.max()\n",
+    "\n",
+    "# Classify spend variables\n",
+    "spend = ['RoomService','FoodCourt','ShoppingMall','Spa','VRDeck']\n",
+    "\n",
+    "for col in spend:\n",
+    "    mean_value = df_train[col].mean()\n",
+    "    df_test[col+'_class'] = 0\n",
+    "    df_test.loc[(df_test[col]>0)&(df_test[col]<mean_value),col+'_class']=0.5\n",
+    "    df_test.loc[(df_test[col]>=mean_value),col+'_class'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_submition = df_test[selected_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define model\n",
+    "clf_forest = RandomForestClassifier(n_estimators=250, max_depth=10)\n",
+    "\n",
+    "# Train model\n",
+    "clf_forest.fit(X,y)\n",
+    "\n",
+    "# Predict\n",
+    "y_submition = clf_forest.predict(X_submition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Transported</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0013_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0018_01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0019_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0021_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0023_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4272</th>\n",
+       "      <td>9266_02</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4273</th>\n",
+       "      <td>9269_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4274</th>\n",
+       "      <td>9271_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4275</th>\n",
+       "      <td>9273_01</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4276</th>\n",
+       "      <td>9277_01</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4277 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Transported\n",
+       "0        0013_01         True\n",
+       "1        0018_01        False\n",
+       "2        0019_01         True\n",
+       "3        0021_01         True\n",
+       "4        0023_01         True\n",
+       "...          ...          ...\n",
+       "4272     9266_02         True\n",
+       "4273     9269_01         True\n",
+       "4274     9271_01         True\n",
+       "4275     9273_01        False\n",
+       "4276     9277_01         True\n",
+       "\n",
+       "[4277 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_submition = pd.DataFrame({\n",
+    "    'PassengerId': df_test.PassengerId,\n",
+    "    'Transported': y_submition\n",
+    "})\n",
+    "\n",
+    "df_submition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_submition.to_csv('./data/submission_1.csv', index=False)\n",
+    "\n",
+    "# The score for this submission was 0.78162"
    ]
   },
   {
